--- a/index.html
+++ b/index.html
@@ -12,7 +12,33 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha256-HAaDW5o2+LelybUhfuk0Zh2Vdk8Y2W2UeKmbaXhalfA=" crossorigin="anonymous"/>
   </head>
   <body>
-  
+    <header>
+      <nav id="navbar">
+        <div class="container">
+        <h1 class="logo">
+          <a href="index.html">HBT</a>
+        </h1>
+        <ul>
+          <li>
+            <a class="current" href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+        </div>
+      </nav>
+
+      <div id="showcase">
+        <div class="container">
+          
+        </div>
+      </div>
+
+    </header>
 
   </body>
 
