--- a/index.html
+++ b/index.html
@@ -41,8 +41,40 @@
           </div>
         </div>
       </div>
-
     </header>
+
+
+<section id="home-info" class="bg-dark">
+  <div class="info-img">
+
+  </div>
+  <div class="info-content">
+    <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <a class="btn btn-light" href="about.html">Read More</a>
+  </div>
+
+</section>
+
+<section id="features">
+  <div class="box">
+    <i class="fas fa-hotel fa-3x"></i>
+    <h3>Great Location</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+  </div>
+  <div class="box">
+    <i class="fas fa-utensils fa-3x"></i>
+    <h3>Free Meals</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+  </div>
+  <div class="box">
+    <i class="fas fa-dumbbell fa-3x"></i>
+    <h3>Fitness Room</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+  </div>
+</section>
+
+
 
   </body>
 
