--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="description" content="Welcome to San Diego's hottest new hotel">
     <meta name="keywords" content="hotel, new, san diego">
     <title>Hotel BT | Welcome</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha256-HAaDW5o2+LelybUhfuk0Zh2Vdk8Y2W2UeKmbaXhalfA=" crossorigin="anonymous"/>
   </head>
   <body>
     <header>
@@ -57,23 +55,28 @@
 </section>
 
 <section id="features">
-  <div class="box">
+  <div class="box bg-light">
     <i class="fas fa-hotel fa-3x"></i>
     <h3>Great Location</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
   </div>
-  <div class="box">
+  <div class="box bg-primary">
     <i class="fas fa-utensils fa-3x"></i>
     <h3>Free Meals</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
   </div>
-  <div class="box">
+  <div class="box bg-light">
     <i class="fas fa-dumbbell fa-3x"></i>
     <h3>Fitness Room</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
   </div>
 </section>
 
+<div class="clr"></div>
+
+<footer id="main-footer">
+  <p>Hotel BT &copy; 2019, All Rights Reserved</p>
+</footer>
 
 
   </body>
