--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Welcome to San Diego's hottest new hotel">
     <meta name="keywords" content="hotel, new, san diego">
-    <title>Hotel BT | Welcome</title>
+    <title>Hotel BT | About</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
