--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <header>
         <nav id="navbar">
           <div class="container">
-          <h1 class="logo">
+          <h1 class="logo py-2">
             <a href="index.html">HBT</a>
           </h1>
           <ul>
