Added responsiveness for about and contact pages

--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="hotel, new, san diego">
     <title>Hotel BT | About</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 768px)">
+
   </head>
   <body>
     <header>
